fixed spacings and change checkbox color

--- a/css/login.css
+++ b/css/login.css
@@ -34,23 +34,25 @@ body {
   
 }
 #primary-logo {
-  width: 8rem;
-  margin: 24px 0 0 24px;
+  display: block;
+  width: 9rem;
+  margin: 16px auto;
 }
 
-
+.checkbox a, .form-submit a {
+  color: #FF6200;
+}
 
 .container {
   display: flex;
   flex-direction: column;
   background-color: #4d4d4d;
-  padding: 24px;
+  padding: 32px 24px;
   border-radius: 1rem;
   gap: 32px;
   min-width: 30rem;
 
 }
-
 
 
 .form {
@@ -89,7 +91,14 @@ body {
 .checkbox {
     display: flex;
     justify-content: space-between;
-    font-size: .75rem;
+    font-size: .75rem;   
+}
+
+.remember input {
+  width: 1rem;
+  height: 1rem;
+  outline: none;
+  accent-color: #FF6200;
 }
 
 .form-submit button {
@@ -99,6 +108,11 @@ body {
     background-color: #FF6200;
     border: none;
     margin-bottom: .5rem;
+    transition: 150ms ease;
+    cursor: pointer;
+}
+.form-submit button:hover {
+  background-color: #e75900;
 }
 .form-submit p {
     text-align: center;
@@ -124,3 +138,24 @@ body {
     width: 100%;
 }
 
+.remember {
+  display: flex;
+  gap: .5rem;
+}
+
+.remember input, .remember label {
+  cursor: pointer;
+}
+
+.sign-with {
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+}
+.sign-with li {
+  float: left;
+}
+.sign-with li img {
+  width: 2rem;
+  margin: 0 1rem;
+}
